adding new recipe to the DB